deployment-2/prod/deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snocko-app-prod
  namespace: application-prod
spec:
  selector:
    matchLabels:
      app: snocko-app-prod
  replicas: 2
  template:
    metadata:
      labels:
        app: snocko-app-prod
    spec:
      containers:
      - name: snocko-app-prod
        image: public.ecr.aws/s7j8l1f2/snocko-test:90712b55742a4fb7dd9ffd16ad26556feb54598a
        ports:
        - containerPort: 8081
